Fix gutter for dark mode

--- a/src/components/App/darktheme.css
+++ b/src/components/App/darktheme.css
@@ -25,8 +25,8 @@
 }
 
 .graphiql-container .result-window .CodeMirror-gutters {
-  background: #282d33;
-  border: none !important;
+  background: #21262b;
+  border-right: 1px solid #181a1f !important;
 }
 
 .graphiql-container .resultWrap {
